<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jevon.fragmenttabs.MainActivity">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/mother_container" />

    <LinearLayout
        android:id="@+id/mother_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
            <EditText
                android:id="@+id/name_editView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/biography_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/biography_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/biography"/>
            <EditText
                android:id="@+id/biography_editView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/add_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tab"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/clear_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/create_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_tabs"
                android:onClick="onClick"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
